--- a/index.css
+++ b/index.css
@@ -91,6 +91,7 @@ nav {
   width: 100%;
   box-shadow: 0px 1px 10px black;
   flex-flow: row wrap;
+  z-index: 3;
 }
 
 .navLink {
@@ -130,7 +131,7 @@ nav {
   color: white;
   font-weight: bold;
   margin-top: 5em;
-  display: flex;
+  //display: flex;
   justify-content: space-around;
   flex-flow: row wrap;
 }
@@ -294,8 +295,26 @@ nav {
   flex-flow: row wrap;
 }
 
-.about {
+.about, .projects {
   visibility: hidden;
+}
+
+.eight {
+  display: grid;
+  grid-template: ". . . . . . . .";
+  justify-content: center;
+}
+
+.five {
+  display: grid;
+  grid-template: ". . . . .";
+  justify-content: center;
+}
+
+.four {
+  display: grid;
+  grid-template: ". . . .";
+  justify-content: center;
 }
 
 .projectTitle {
