--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+
+//alternate color #840d6c (Add border/change text color);
+
 * {
   box-sizing: border-box;
 }
@@ -7,6 +10,7 @@ body {
   transition: all 200ms;
   will-change: background;
 }
+
 
 .introBox {
   margin-left: 25%;
@@ -131,9 +135,10 @@ nav {
   color: white;
   font-weight: bold;
   margin-top: 5em;
-  //display: flex;
+  //display: grid;
   justify-content: space-around;
   flex-flow: row wrap;
+  padding: .5em;
 }
 
 .contact {
@@ -145,21 +150,22 @@ nav {
 }
 
 .contact:hover {
-  box-shadow: inset -20px -19px 20px 20px #ff1bd1;
+  box-shadow: inset -20px -19px 20px 20px #ffb3f0;
 }
 
 .infoFoot {
   font-family: 'Asap', sans-serif;
   text-align: center;
   color: black;
-  width: 100vw;
   font-size: medium;
   border-top: 2px double lightgray;
   background-color: #c3c1c363;
   position: relative;
   bottom: -1em;
   right: 1em;
-  padding: 1em;
+  padding-top: 2em;
+  width: 100vw;
+  padding-bottom: 2em;
 }
 
 .infoBox {
@@ -248,6 +254,8 @@ nav {
   margin: 5rem auto;
   justify-content: space-around;
   flex-flow: row wrap;
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
 }
 
 .projectLink {
@@ -255,48 +263,48 @@ nav {
   color: #c2009b;
   background-color: ghostwhite;
   padding: .5em;
-  border: 1px solid transparent;
-  //border-radius: .5em;
+  border: 1px solid black;
   font-family: 'Varela Round', sans-serif;
   margin: .5em;
-  box-shadow: 6px 6px black;
   flex-basis: 18em;
 }
 
 .projectLink:hover {
   cursor: pointer;
-  background-color: #ff1bd1;
   border: 1px solid white;
-  color: white;
+  color: black;
   transition-duration: 500ms;
+  transition-timing-function: ease;
+  box-shadow: 6px 6px black;
+  transform: translate(-.3em, -.3em);
+  background-color: #ffb3f0;
 }
 
 .aboutP {
   background-color: black;
-  padding: 3em;
+  padding: 4em;
   margin: 2em;
   font-family: 'Varela Round', sans-serif;
   font-size: medium;
-  flex: 1 2;
   text-align: center;
-  height: 20em;
   transition: 300ms ease-in-out;
 }
 
 
 .aboutP:hover {
-  box-shadow: 5px 5px 0px 0px white;
+  box-shadow: 5px 5px 0px 0px #ff1bd1;
   transform: translate(-.3em, -.3em);
 }
 
-.pro, .per {
-  display: flex;
-  justify-content: space-evenly;
-  flex-flow: row wrap;
+.tiles {
+  display: grid;
+  scroll-snap-align: start;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 .about, .projects {
   visibility: hidden;
+  scroll-snap-type: y mandatory;
 }
 
 .eight {
